# saya

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
apps/saya-macos/: project.yml
apps/saya-macos/Resources/: AppIcon.icns  Info.plist
apps/saya-macos/Sources/: AppState.swift  Calculator.swift  ClipboardView.swift  DevServer.swift  Hotkeys.swift  LauncherTypes.swift  LauncherView.swift  Log.swift  PanelController.swift  PanelStyle.swift  SayaApp.swift  SettingsView.swift  SettingsWindow.swift
crates/saya-cli/: Cargo.toml
crates/saya-cli/src/: main.rs
crates/saya-core/: Cargo.toml
crates/saya-core/src/: lib.rs  paths.rs
crates/saya-core/src/ai/: embedder.rs  mod.rs
crates/saya-core/src/clipboard/: macos_impl.rs  mod.rs
crates/saya-core/src/database/: mod.rs  schema.rs  text_index.rs
crates/saya-core/src/launcher/: macos.rs  matcher.rs  mod.rs  scanner.rs  watcher.rs
crates/saya-core/src/search/: mod.rs
crates/saya-ffi/: Cargo.toml
crates/saya-ffi/src/: lib.rs  logging.rs
scripts/: bindgen.sh  devloop.sh  diagnose.sh  drive.applescript  make-icon.sh
scripts/test/: e2e.sh  lib.sh
