[package]
name = "saya-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "saya"
path = "src/main.rs"

[dependencies]
saya-core.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true

[features]
default = []
embedding = ["saya-core/embedding"]
