[package]
name = "saya-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
sqlite-vec.workspace = true
tantivy.workspace = true
jieba-rs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
rayon.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
notify.workspace = true

[features]
default = []
embedding = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]

[dependencies.candle-core]
workspace = true
optional = true

[dependencies.candle-nn]
workspace = true
optional = true

[dependencies.candle-transformers]
workspace = true
optional = true

[dependencies.tokenizers]
workspace = true
optional = true

[dependencies.hf-hub]
workspace = true
optional = true
